        https://bugs.webkit.org/show_bug.cgi?id=26544

If I am doing a Matrix hardware animation and any matrix is singular, I revert to software.
        This is not really testable, since we can't see what the hardware animation is doing.

        * platform/graphics/mac/GraphicsLayerCA.mm:
        (WebCore::GraphicsLayerCA::animateTransform):



Canonical link: https://commits.webkit.org/36690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44878 268f45cc-cd09-0410-ab3c-d52691b4dbfc